# i-music-player

./: .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/tiff/: MiniPlayerAlbumFoldUpButton.tiff  MiniPlayerAlbumFoldUpSpread.tiff  MiniPlayerCloseButton.tiff  MiniPlayerCloseButtonDark.tiff  MiniPlayerCloseButtonPressed.tiff  MiniPlayerCloseButtonPressedDark.tiff  MiniPlayerDeleteButton.tiff  MiniPlayerDeleteButtonDark.tiff  MiniPlayerDeleteButtonDisabled.tiff  MiniPlayerDeleteButtonDisabledDark.tiff  MiniPlayerDeleteButtonPressed.tiff  MiniPlayerDeleteButtonPressedDark.tiff  MiniPlayerDislikeButton.tiff  MiniPlayerDislikeButtonDark.tiff  MiniPlayerDislikeButtonDisabled.tiff  MiniPlayerDislikeButtonDisabledDark.tiff  MiniPlayerDislikeButtonPressed.tiff  MiniPlayerDislikeButtonPressedDark.tiff  MiniPlayerFastForwardButton.tiff  MiniPlayerFastForwardButtonDisabled.tiff  MiniPlayerFastForwardButtonSelected.tiff  MiniPlayerLargeAlbumDefault.tiff  MiniPlayerLikeButton.tiff  MiniPlayerLikeButtonPressed.tiff  MiniPlayerLyricsButton.tiff  MiniPlayerLyricsButtonActive.tiff  MiniPlayerLyricsButtonDark.tiff  MiniPlayerLyricsButtonDisabled.tiff  MiniPlayerPauseButton.tiff  (+50 more)
src/: App.tsx  PlayerInitiator.tsx  env.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  music_api.rs  request.rs  tray.rs
(+138 files in other folders)
